[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yard-rl"
version = "0.1.0"
description = "부산항 야드크레인 강화학습 PoC — 이벤트 기반 야드 시뮬레이터와 priority-rule 선택 RL"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["streamlit>=1.30", "plotly>=5.20"]  # 검증 replay UI (04 문서, YR-015)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
